--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sistem Informasi Gempa Bumi Indonesia</title>
+  <title>Sistem Informasi Gempa Bumi Indonesia (SIGEMBI)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -81,7 +81,7 @@
       <a href=" {{ url_for('index') }} " class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="static/img/logo.png" alt=""> -->
-        <h1 class="d-flex align-items-center">Sistem Informasi Gempa Bumi Indonesia</h1>
+        <h1 class="d-flex align-items-center">Sistem Informasi Gempa Bumi Indonesia (SIGEMBI)</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -221,7 +221,7 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href=" {{ url_for('index') }} " class="logo d-flex align-items-center">
-              <span>Sistem Informasi Gempa Bumi</span>
+              <span>SIGEMBI</span>
             </a>
             <p>Wadah informasi gempa bumi Indonesia terdahulu sebagai wawasan masyarakat</p>
             <div class="social-links d-flex  mt-3">
